--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.7.0",
     "@emotion/react": "^11.14.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.10",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
