--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.7.0",
+    "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "axios": "^1.8.2",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.7.4",
     "mousetrap": "^1.6.5",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
